--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
           <div>
             <div class="poem">i bought these pants because they were half price 
 they were corduroy
-brown wrinkled in a way that shows i have lived a little
+brown
+wrinkled in a way that shows i have lived a little
 i found a folded slip of paper 
 tucked into the left front pocket
 it was a poem
