✨ GH-Quiet: Add interest indicator and poem title

--- a/quiet.html
+++ b/quiet.html
@@ -154,6 +154,10 @@
         <div class="container">
           <h1>quiet—</h1>
           <p>
+            <small><i><b>3 / 100</b> photographers has currently joined the project</i></small>
+          </p>
+          <br/>
+          <p>
             this project is about giving publicity to small independent
             photographers by pairing their images with poems. there is place for
             up to 100 photographers to join and be featured.
@@ -162,19 +166,14 @@
       </section>
 
       <section id="sample" class="container section">
-        <h2>Sample Pairing</h2>
+        <h2>Pocket Poem (Sample Pairing)</h2>
         <div class="poem-photo container">
           <div>
-            <div class="poem">i bought these pants because they were half price 
-they were corduroy
-brown wrinkled in a way that shows i have lived a little
-i found a folded slip of paper 
-tucked into the left front pocket
-it was a poem
-written in blue pen
-on lined paper torn from a notebook
-there were no rhymes
-[...]
+            <div class="poem">i bought these pants because they were half price they were
+corduroy brown wrinkled in a way that shows i have lived a little
+i found a folded slip of paper tucked into the left front pocket
+it was a poem written in blue pen on lined paper torn from a
+notebook there were no rhymes [...]
             </div>
           </div>
           <div>
